Commit ke 3 penyelesaian bug tidak bisa masuk db

--- a/app/src/main/res/layout/item_cardview_tvshow.xml
+++ b/app/src/main/res/layout/item_cardview_tvshow.xml
@@ -26,7 +26,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             card_view:cardCornerRadius="15dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toStartOf="parent"
